fix bugs and update app logo

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       ICONS
     ========================================================== -->
     <link rel="icon" type="image/svg+xml" href="/DevKit.svg" />
-    <link rel="apple-touch-icon" href="/DevKit.png" />
-    <link rel="mask-icon" href="/DevKit.png" color="#ff6b6b" />
+    <link rel="apple-touch-icon" href="/DevKit.svg" />
+    <link rel="mask-icon" href="/DevKit.svg" color="#ff6b6b" />
 
     <!-- =========================================================
       PWA
@@ -62,7 +62,7 @@
       property="og:description"
       content="A modern toolkit for developers: JSON, Markdown, Mermaid, JS IDE, SVG editor, GitHub trending, and more."
     />
-    <meta property="og:image" content="/DevKit.png" />
+    <meta property="og:image" content="/DevKit.svg" />
     <meta property="og:url" content="/" />
     <meta property="og:site_name" content="DevKit" />
 
@@ -73,7 +73,7 @@
       name="twitter:description"
       content="All your essential developer tools in one fast, modern web app."
     />
-    <meta name="twitter:image" content="/DevKit.png" />
+    <meta name="twitter:image" content="/DevKit.svg" />
 
     <!-- =========================================================
       PERFORMANCE HINTS
