--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
       http-equiv="Content-Security-Policy"
       content="
         default-src 'self';
-        script-src 'self' 'unsafe-inline';
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;
         style-src 'self' 'unsafe-inline';
         img-src 'self' data: blob:;
         font-src 'self' data:;
-        connect-src 'self';
+        connect-src 'self' https://api.quotable.io;
         frame-src 'self';
       "
     />
