Update app logo

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <!-- =========================================================
       ICONS
     ========================================================== -->
-    <link rel="icon" type="image/svg+xml" href="/DevKit.svg" />
-    <link rel="apple-touch-icon" href="/DevKit.svg" />
-    <link rel="mask-icon" href="/DevKit.svg" color="#ff6b6b" />
+    <link rel="icon" type="image/png+xml" href="/DevKit.png" />
+    <link rel="apple-touch-icon" href="/DevKit.png" />
+    <link rel="mask-icon" href="/DevKit.png" color="#ff6b6b" />
 
     <!-- =========================================================
       PWA
